# backend/pkg/models/post.go
@@ -1,0 +1,13 @@
+package models
+
+import "time"
+
+type Post struct {
+	ID        string    `json:"id"`
+	UserID    string    `json:"user_id"`
+	Title     string    `json:"title"`
+	Content   string    `json:"content"`
+	ImageURL  string    `json:"image_url,omitempty"`
+	Privacy   string    `json:"privacy"`
+	CreatedAt time.Time `json:"createdAt"`
+}
